<resources>
    <string name="app_name">PiouPiou</string>

    <!-- Map string staff -->
    <string name="search_label">Search...</string>
    <string name="search_hint">Recherche</string>
    <string name="place_marker_text">Placer le marker</string>


    <!-- Menu string staff -->
    <string name="add_thing">Ajouter</string>
    <string name="my_drafts">Mes Brouillons</string>
    <string name="warning">Alertes</string>
    <string name="history">Historique</string>

    <!-- Add spinner string staff -->
    <string name="direction">Veuillez choisir une direction</string>
    <string name="type">Veuillez choisir un type</string>
    <string name="meteo">Veuillez choisir une météo</string>
    <string name="huntable_spinner">La zone est chassable</string>

    <!-- Draft string staff -->
    <string name="species_string">Espèce : </string>
    <string name="number_bird_string">Nombre : </string>
    <string name="direction_string">Direction : </string>
    <string name="weather_string">Météo : </string>
    <string name="huntable_string">Chassable : </string>
    <string name="type_string">Type : </string>

    <!-- Register string staff -->
    <string name="create_account">Créer un compte</string>
    <string name="insert_email">Entrez une adresse mail :</string>
    <string name="insert_email_placeholder">Entrez un mail</string>
    <string name="insert_pseudo">Entrez une pseudonyme :</string>
    <string name="insert_pseudo_placeholder">Entrez un pseudo</string>
    <string name="insert_password">Entrez un mot de passe :</string>
    <string name="insert_password_placeholder">Entrez un mot de passe</string>
    <string name="confirm_password_placeholder">Confirmez le mot de passe</string>
    <string name="create_account_button">Création du compte</string>

    <!-- Connection string staff -->
    <string name="insert_identifiant_connection">Entrez votre identifiant :</string>
    <string name="insert_identifiant_placeholder">Entrez votre mail ou pseudo</string>
    <string name="insert_password_connection">Entrez votre mot de passe :</string>
    <string name="insert_password__connection_placeholder">Entrez votre mot de passe</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="connection_string">Se connecter</string>
    <string name="register_string">S\'inscrire</string>

    <!-- Forget Password string staff -->
    <string name="insert_email_forget_password">Entrez votre adresse mail :</string>
    <string name="reinitialisation_string">Réinitialiser</string>
    <string name="change_password_string">Vous allez recevoir un email pour changer votre mot de passe.</string>
    <string name="insert_email_forger_placeholder">Entrez votre adresse mail</string>

    <!-- Add things string staff -->
    <string name="add_recensement_string">RECENSEMENT</string>
    <string name="add_repere_string">REPÈRE</string>
    <string name="add_observation_string">SITE D\'OBSERVATION</string>
    <string name="add_contact_string">CONTACT</string>
    <string name="add_contact">Ajouter un Contact</string>
    <string name="validate_button">Valider</string>
    <string name="phone_number_string">Numéro de télephone</string>
    <string name="name_string">Nom</string>
    <string name="calendar">Calendrier</string>
    <string name="statistics">Statistiques</string>
    <string name="new_census_string">Recensement</string>
    <string name="species_edit_text">Espèce</string>
    <string name="nombre">Nombre</string>
    <string name="register_census">Enregistrer</string>
    <string name="warning1">Attention ! Fortes pluies dans le 06 le 08/03/22</string>
    <string name="warning2">Attention ! Fortes pluies dans le 83 le 06/03/22</string>
    <string name="actualit_sur_les_oiseaux">Quoi de neuf sur Twitter ?</string>
    <string name="twitter">Twitter\n</string>


    <string name="app_name2">Voici le GPS !</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeName">Ville: inconnue</string>
    <string name="gps">GPS</string>


</resources>