<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".connection.ConnectionActivity">

    <ImageView
        android:id="@+id/bird_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/pioupiou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/insertEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/insert_identifiant_connection"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bird_image" />


    <EditText
        android:id="@+id/insertEmailEdit"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:background="@color/grey"
        android:hint="@string/insert_identifiant_placeholder"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insertEmailText" />

    <TextView
        android:id="@+id/insertPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/insert_password_connection"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insertEmailEdit" />

    <EditText
        android:id="@+id/insertPasswordEdit"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:background="@color/grey"
        android:hint="@string/insert_password__connection_placeholder"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insertPasswordText" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="68dp"
        android:text="@string/forgot_password"
        android:textColor="@color/green_700"
        android:textStyle="bold"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insertPasswordEdit" />

    <Button
        android:id="@+id/connectionButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/green"
        android:text="@string/connection_string"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintLeft_toRightOf="@id/registerButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget_password" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:text="@string/register_string"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/connectionButton"
        app:layout_constraintTop_toBottomOf="@id/forget_password" />

</androidx.constraintlayout.widget.ConstraintLayout>