<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="left"
    android:radius="10dp"
    android:shadowColor="@color/black"
    android:id="@+id/bird_draft"
    tools:context=".BirdEventDraftList">

    <TextView
        android:id="@+id/date_draft"
        android:layout_width="220dp"
        android:layout_height="25dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/type_draft"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:background="@color/button_gray"
        android:paddingStart="10dp"
        android:text="@string/type_string"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/species_draft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_draft" />

    <TextView
        android:id="@+id/species_draft"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:background="@color/button_gray"
        android:paddingStart="10dp"
        android:text="@string/species_string"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/numberOfBird_draft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/numberOfBird_draft"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:background="@color/button_gray"
        android:paddingStart="10dp"
        android:text="@string/number_bird_string"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/direction_draft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/direction_draft"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:background="@color/button_gray"
        android:paddingStart="10dp"
        android:text="@string/direction_string"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/weather_draft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/weather_draft"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:background="@color/button_gray"
        android:paddingStart="10dp"
        android:text="@string/weather_string"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/huntable_draft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/huntable_draft"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:background="@color/button_gray"
        android:paddingStart="10dp"
        android:text="@string/huntable_string"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/weather_draft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>