<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".connection.ConnectionActivity">

    <ImageView
        android:id="@+id/bird_image"
        android:src="@drawable/pioupiou"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/insertEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_email_forget_password"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bird_image" />

    <EditText
        android:id="@+id/insertEmailEdit"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:background="@color/grey"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/insert_email_forger_placeholder"
        app:layout_constraintTop_toBottomOf="@id/insertEmailText"/>


    <TextView
        android:id="@+id/changePasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/change_password_string"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insertEmailEdit" />

    <Button
        android:id="@+id/reinitialisationButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/green_500"
        android:text="@string/reinitialisation_string"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordText"/>

</androidx.constraintlayout.widget.ConstraintLayout>